[gd_scene load_steps=4 format=3 uid="uid://bwhjjq2xipssj"]

[ext_resource type="Script" path="res://player/weapons/weapon_group.gd" id="1_8soxh"]
[ext_resource type="Script" path="res://player/weapons/gun/target_range.gd" id="2_34oh4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7gy2c"]
resource_local_to_scene = true
radius = 218.85

[node name="WeaponGroup" type="Node2D"]
script = ExtResource("1_8soxh")

[node name="TargetRange" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("2_34oh4")

[node name="TargetRangeShape" type="CollisionShape2D" parent="TargetRange"]
shape = SubResource("CircleShape2D_7gy2c")

[node name="Weapons" type="Node2D" parent="."]
